// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders with center content 1`] = `
<RCTSafeAreaView
  emulateUnlessSupported={true}
  style={
    Object {
      "backgroundColor": "transparent",
    }
  }
>
  <View
    style={
      Array [
        Object {
          "flexDirection": "row",
          "height": 56,
          "paddingTop": 0,
        },
        undefined,
        null,
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "paddingLeft": 5,
          },
          Object {
            "alignItems": "flex-start",
            "flex": 1,
            "justifyContent": "center",
          },
        ]
      }
    />
    <View
      style={
        Array [
          Object {},
          Object {
            "alignItems": "center",
            "flex": 5,
            "justifyContent": "center",
          },
        ]
      }
    >
      <Text
        style={
          Array [
            Object {
              "color": "#505256",
            },
            Object {
              "fontFamily": "SourceSansPro-Regular",
            },
            Object {},
          ]
        }
      >
        Center
      </Text>
    </View>
    <View
      style={
        Array [
          Object {
            "paddingRight": 5,
          },
          Object {
            "alignItems": "flex-end",
            "justifyContent": "center",
          },
        ]
      }
    />
  </View>
</RCTSafeAreaView>
`;

exports[`renders with left content 1`] = `
<RCTSafeAreaView
  emulateUnlessSupported={true}
  style={
    Object {
      "backgroundColor": "transparent",
    }
  }
>
  <View
    style={
      Array [
        Object {
          "flexDirection": "row",
          "height": 56,
          "paddingTop": 0,
        },
        undefined,
        null,
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "paddingLeft": 5,
          },
          Object {
            "alignItems": "flex-start",
            "flex": 1,
            "justifyContent": "center",
          },
        ]
      }
    >
      <Text
        style={
          Array [
            Object {
              "color": "#505256",
            },
            Object {
              "fontFamily": "SourceSansPro-Regular",
            },
            Object {},
          ]
        }
      >
        Left
      </Text>
    </View>
    <View
      style={
        Array [
          Object {
            "paddingRight": 5,
          },
          Object {
            "alignItems": "flex-end",
            "justifyContent": "center",
          },
        ]
      }
    />
  </View>
</RCTSafeAreaView>
`;

exports[`renders with no props 1`] = `
<RCTSafeAreaView
  emulateUnlessSupported={true}
  style={
    Object {
      "backgroundColor": "transparent",
    }
  }
>
  <View
    style={
      Array [
        Object {
          "flexDirection": "row",
          "height": 56,
          "paddingTop": 0,
        },
        undefined,
        null,
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "paddingLeft": 5,
          },
          Object {
            "alignItems": "flex-start",
            "flex": 1,
            "justifyContent": "center",
          },
        ]
      }
    />
    <View
      style={
        Array [
          Object {
            "paddingRight": 5,
          },
          Object {
            "alignItems": "flex-end",
            "justifyContent": "center",
          },
        ]
      }
    />
  </View>
</RCTSafeAreaView>
`;

exports[`renders with right content 1`] = `
<RCTSafeAreaView
  emulateUnlessSupported={true}
  style={
    Object {
      "backgroundColor": "transparent",
    }
  }
>
  <View
    style={
      Array [
        Object {
          "flexDirection": "row",
          "height": 56,
          "paddingTop": 0,
        },
        undefined,
        null,
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "paddingLeft": 5,
          },
          Object {
            "alignItems": "flex-start",
            "flex": 1,
            "justifyContent": "center",
          },
        ]
      }
    />
    <View
      style={
        Array [
          Object {
            "paddingRight": 5,
          },
          Object {
            "alignItems": "flex-end",
            "justifyContent": "center",
          },
        ]
      }
    >
      <Text
        style={
          Array [
            Object {
              "color": "#505256",
            },
            Object {
              "fontFamily": "SourceSansPro-Regular",
            },
            Object {},
          ]
        }
      >
        Right
      </Text>
    </View>
  </View>
</RCTSafeAreaView>
`;

exports[`renders with shadow 1`] = `
<RCTSafeAreaView
  emulateUnlessSupported={true}
  style={
    Object {
      "backgroundColor": "transparent",
    }
  }
>
  <View
    style={
      Array [
        Object {
          "flexDirection": "row",
          "height": 56,
          "paddingTop": 0,
        },
        undefined,
        Object {
          "elevation": 4,
        },
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "paddingLeft": 5,
          },
          Object {
            "alignItems": "flex-start",
            "flex": 1,
            "justifyContent": "center",
          },
        ]
      }
    />
    <View
      style={
        Array [
          Object {
            "paddingRight": 5,
          },
          Object {
            "alignItems": "flex-end",
            "justifyContent": "center",
          },
        ]
      }
    />
  </View>
</RCTSafeAreaView>
`;

exports[`renders with styles 1`] = `
<RCTSafeAreaView
  emulateUnlessSupported={true}
  style={
    Object {
      "backgroundColor": "transparent",
    }
  }
>
  <View
    style={
      Array [
        Object {
          "flexDirection": "row",
          "height": 56,
          "paddingTop": 0,
        },
        Object {
          "backgroundColor": "blue",
        },
        null,
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "paddingLeft": 5,
          },
          Object {
            "alignItems": "flex-start",
            "flex": 1,
            "justifyContent": "center",
          },
        ]
      }
    />
    <View
      style={
        Array [
          Object {},
          Object {
            "alignItems": "center",
            "flex": 4,
            "justifyContent": "center",
          },
        ]
      }
    >
      <Text
        numberOfLines={1}
        style={
          Array [
            Object {
              "color": "#505256",
            },
            Object {
              "fontFamily": "SourceSansPro-Regular",
            },
            Array [
              Object {
                "color": "white",
                "fontSize": 14,
                "fontWeight": "500",
              },
              Object {
                "color": "red",
              },
            ],
          ]
        }
      >
        Title
      </Text>
    </View>
    <View
      style={
        Array [
          Object {
            "paddingRight": 5,
          },
          Object {
            "alignItems": "flex-end",
            "justifyContent": "center",
          },
        ]
      }
    />
  </View>
</RCTSafeAreaView>
`;

exports[`renders with title 1`] = `
<RCTSafeAreaView
  emulateUnlessSupported={true}
  style={
    Object {
      "backgroundColor": "transparent",
    }
  }
>
  <View
    style={
      Array [
        Object {
          "flexDirection": "row",
          "height": 56,
          "paddingTop": 0,
        },
        undefined,
        null,
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "paddingLeft": 5,
          },
          Object {
            "alignItems": "flex-start",
            "flex": 1,
            "justifyContent": "center",
          },
        ]
      }
    />
    <View
      style={
        Array [
          Object {},
          Object {
            "alignItems": "center",
            "flex": 4,
            "justifyContent": "center",
          },
        ]
      }
    >
      <Text
        numberOfLines={1}
        style={
          Array [
            Object {
              "color": "#505256",
            },
            Object {
              "fontFamily": "SourceSansPro-Regular",
            },
            Array [
              Object {
                "color": "white",
                "fontSize": 14,
                "fontWeight": "500",
              },
              undefined,
            ],
          ]
        }
      >
        Title
      </Text>
    </View>
    <View
      style={
        Array [
          Object {
            "paddingRight": 5,
          },
          Object {
            "alignItems": "flex-end",
            "justifyContent": "center",
          },
        ]
      }
    />
  </View>
</RCTSafeAreaView>
`;

exports[`renders with title and subtitle 1`] = `
<RCTSafeAreaView
  emulateUnlessSupported={true}
  style={
    Object {
      "backgroundColor": "transparent",
    }
  }
>
  <View
    style={
      Array [
        Object {
          "flexDirection": "row",
          "height": 56,
          "paddingTop": 0,
        },
        undefined,
        null,
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "paddingLeft": 5,
          },
          Object {
            "alignItems": "flex-start",
            "flex": 1,
            "justifyContent": "center",
          },
        ]
      }
    />
    <View
      style={
        Array [
          Object {
            "marginTop": 2,
            "paddingHorizontal": 10,
          },
          Object {
            "alignItems": "center",
            "flex": 4,
            "justifyContent": "center",
          },
        ]
      }
    >
      <Text
        numberOfLines={1}
        style={
          Array [
            Object {
              "color": "#505256",
            },
            Object {
              "fontFamily": "SourceSansPro-Regular",
            },
            Object {
              "color": "#ffffff",
              "fontSize": 12,
            },
          ]
        }
      >
        Subtitle
      </Text>
      <Text
        numberOfLines={1}
        style={
          Array [
            Object {
              "color": "#505256",
            },
            Object {
              "fontFamily": "SourceSansPro-Regular",
            },
            Object {
              "color": "#ffffff",
              "fontSize": 20,
            },
          ]
        }
      >
        Title
      </Text>
    </View>
    <View
      style={
        Array [
          Object {
            "paddingRight": 5,
          },
          Object {
            "alignItems": "flex-end",
            "justifyContent": "center",
          },
        ]
      }
    />
  </View>
</RCTSafeAreaView>
`;
